[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dnadiffusion"
version = "0.0.0"  # hatch dynamic versionを使っていたので、仮置き
authors = [
  { name = "dnadiffusion", email = "dnadiffusion@pinellolab.org" }
]
description = "Library for probabilistic analysis of protein-protein interaction sequencing data."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "accelerate",
  "click==8.1.7",
  "einops==0.7.0",
  "genomepy==0.16.1",
  "gimmemotifs==0.18.0",
  "gtfparse==1.3.0",
  "jupyterlab==4.0.9",
  "matplotlib==3.8.1",
  "memory-efficient-attention-pytorch",
  "pandas==2.1.3",
  "pybedtools==0.9.1",
  "seaborn==0.13.0",
  "sourmash==4.8.4",
  "torch==2.3.1",
  "torchvision",
  "wandb==0.16.0"
]

[project.scripts]
dnadiffusion = "dnadiffusion.cli:main"

[project.optional-dependencies]
dev = [
  "mkdocs-material==9.4.8",
  "mkdocstrings==0.23.0",
  "mkdocstrings[python]",
  "mypy==1.10.0",
  "pytest==7.4.3",
  "pytest-asyncio==0.21.1",
  "pytest-cov==4.1.0",
  "ruff",
  "types-tqdm==4.66.0.4",
  "xdoctest==1.1.2",
]

[project.urls]
Documentation = "https://pinellolab.github.io/DNA-Diffusion"
Source = "https://github.com/pinellolab/DNA-Diffusion"

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
  "A", "C", "DTZ", "EM", "I", "ICN", "ISC", "PLC", "PLE", "PLR", "PLW", "Q", "RUF", "TID", "UP", "W", "YTT"
]
ignore = [
  "B027", "FBT003", "S105", "S106", "S107", "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "RUF007"
]
unfixable = ["F401"]
exclude = ["src/refactor"]

[tool.ruff.isort]
known-first-party = ["dnadiffusion"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.pytest.ini_options]
addopts = "--cov=src/dnadiffusion/ --cov-report=term-missing --ignore=src/refactor"
asyncio_mode = "strict"

[tool.coverage.run]
source_pkgs = ["dnadiffusion", "tests"]
branch = true
parallel = true
omit = [
  "src/dnadiffusion/__about__.py",
  "src/dnadiffusion/__main__.py",
  "tests/conftest.py",
]

[tool.coverage.paths]
dnadiffusion = ["src/dnadiffusion", "*/dnadiffusion/src/dnadiffusion"]
tests = ["tests", "*/dnadiffusion/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
  "accelerate",
  "Bio",
  "hydra_zen",
  "memory_efficient_attention_pytorch",
  "matplotlib",
  "matplotlib.pyplot",
  "pandas",
  "torchvision",
  "torchvision.transforms",
  "seaborn",
  "scipy.special",
  "sourmash"
]
ignore_missing_imports = true

